<resources>
    <string name="app_name">PROXIMITY HOME</string>
    <string name="serverActivity">Server Settings</string>
    <string name="beacon_image_desc">image of beacon</string>
    <string name="where_is_light">Aktualnie światło zapalone dla</string>
    <string name="beacons_title">Beacons</string>
    <string name="editTextInfoServers">Poniżej wprowadź ustawienia serwera. Podaj adres IP oraz port, na którym uruchomiona jest usługa.</string>
    <string name="editTextServerHint">127.0.0.1</string>
    <string name="editTextPortHint">12345</string>
    <string name="tvServerIP">Serwer IP</string>
    <string name="tvPort">Numer Portu</string>
    <string name="action_settings_name">Ustawienia serwera</string>
    <string name="digitsForServer">1234567890.</string>
    <string name="saveButton">ZAPISZ</string>
    <string name="startService">Start</string>
    <string name="stopService">Stop</string>
    <string name="startStopDesc">Jeżeli połączenie zostanie nawiązane, wyświetli się powiadomienie.</string>
    <string name="tvConnectionStatusPositive"><font fgcolor='#19ed32'>Połączono</font></string>
    <string name="tvConnectionStatusNegative"><font fgcolor='#d73b45'>Nie połączono</font></string>
    <string name="action_renew">Refresh</string>
    <string name="server">proximityserver.database.windows.net</string>
    <string name="user">Michal</string>
    <string name="pass">Qaz12345</string>
    <string name="tvOfficeStatus">Biuro</string>
    <string name="tvSaloonStatus">Salon</string>
    <string name="tvKitchenStatus">Kuchnia</string>
    <string name="statusOn">ŚWIATŁO WŁĄCZONE</string>
    <string name="statusOff">ŚWIATŁO WYŁĄCZONE</string>
    <string name="tvInfoAboutButtonsSMH">Wybierz okres rozliczenia.</string>
    <string name="buttonDays">DNI</string>
    <string name="buttonMinutes">MINUTY</string>
    <string name="buttonHours">GODZINY</string>
    <string name="action_details">Czas pracy</string>
    <string name="dialogMessageConnectWithDatabaseFailure">Wystąpił błąd połączenia z bazą, spróbuj ponownie później.</string>
    <string name="dialogMessageWait">Czekaj... Pobieram aktualne dane.</string>
    <string name="startDate">Data początkowa</string>
    <string name="endDetailsDate">Data końcowa</string>
    <string name="tvSeparator"><![CDATA[--->]]></string>
    <string name="action_checkout">Szczegóły logowania czasu</string>
    <string name="line">line</string>
    <string name="time_in">Czas wejścia</string>
    <string name="time_out">Czas wyjścia</string>
    <string name="notification_error">Utracono połączenie z serwerem!</string>
    <string name="notification_error_text">Wróć do aplikacji i ponownie uruchom usługę!</string>
    <string name="descriptionOfBackButton">backButton</string>
    <string name="btBackToMenu">Powrót do Menu</string>
</resources>
